--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,20 +1,22 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
     <div class="container">
-      <a class="navbar-brand" href="#">Dating App</a>
-      <ul class="navbar-nav mr-auto mb-2 mb-md-0" *ngIf="accountService.currentUsers$ | async">
-        <li class="nav-item">
-          <a class="nav-link"  href="#">Matches</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Lists</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link">Messages</a>
-        </li>
+      <a class="navbar-brand" routerLink="/" routerLinkActive="active">Dating App</a>
+      <ul class="navbar-nav mr-auto mb-2 mb-md-0">
+        <ng-container *ngIf="accountService.currentUsers$ | async">
+          <li class="nav-item">
+            <a class="nav-link"  routerLink="/members" routerLinkActive="active">Matches</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+          </li>
+        </ng-container>
       </ul>
 
-      <div class="btn-group" dropdown *ngIf="accountService.currentUsers$ | async">
-        <a dropdownToggle class="dropdown-toggle text-light">Welcome User<span class="caret"></span></a>
+      <div class="btn-group" dropdown *ngIf="(accountService.currentUsers$ | async) as user">
+        <div dropdownToggle class="dropdown-toggle text-white">Welcome {{user.username | titlecase}}<span class="caret"></span></div>
         <div  *dropdownMenu class="dropdown-menu mt-3">
           <a class="dropdown-item">Edit Profile</a>
           <div class="dropdown-divider"></div>
@@ -25,7 +27,7 @@
       <form #loginForm="ngForm" *ngIf="(accountService.currentUsers$ | async)===null" class="d-flex" (ngSubmit)="login()">
         <input name="username" [(ngModel)]="model.username" class="form-control mr-2" type="text" placeholder="Username">
         <input name="password" [(ngModel)]="model.password" class="form-control mr-2" type="password" placeholder="Password">
-        <button class="btn btn-outline-success" type="submit">Login</button>
+        <button class="btn btn-secondary btn-sm" type="submit">Login</button>
       </form>
     </div>
   </nav>
