--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,5 +1,5 @@
 <form #registerForm="ngForm" (ngSubmit)="register()">
-<h2 class="text-center text-primary">Sign up</h2>
+<h2 class="text-center text-white">Sign up</h2>
 <hr/>
 <div class="form-group">
     <input type="text" name="username" [(ngModel)]="model.username" class="form-control" placeholder="Username">
@@ -8,7 +8,7 @@
     <input type="password" name="password" [(ngModel)]="model.password" class="form-control" placeholder="Password">
 </div>
 <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Register</button>
-    <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+    <button class="btn btn-primary mr-2" type="submit">Register</button>
+    <button class="btn btn-danger" type="button" (click)="cancel()">Cancel</button>
 </div>
 </form>
