--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -18,10 +18,11 @@
         </li>
       </ul>
 
-      <div class="btn-group" dropdown *ngIf="(accountService.currentUsers$ | async) as user">
-        <div dropdownToggle class="dropdown-toggle text-white">Welcome {{user.username | titlecase}}<span class="caret"></span></div>
-        <div  *dropdownMenu class="dropdown-menu mt-3">
-          <a class="dropdown-item">Edit Profile</a>
+      <div class="dropdown" dropdown *ngIf="(accountService.currentUsers$ | async) as user">
+        <img src="{{user.photoUrl || './assets/user.png'}}" class="rounded-circle" alt="{{user.username}}">
+        <a dropdownToggle class="dropdown-toggle text-light ml-2 font-weight-bold text-decoration-none">Welcome {{user.username | titlecase}}<span class="caret"></span></a>
+        <div  *dropdownMenu class="dropdown-menu mt-1">
+          <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" (click)="logout()">Logout</a>
         </div>
@@ -30,7 +31,7 @@
       <form #loginForm="ngForm" *ngIf="(accountService.currentUsers$ | async)===null" class="d-flex" (ngSubmit)="login()">
         <input name="username" [(ngModel)]="model.username" class="form-control mr-2" type="text" placeholder="Username">
         <input name="password" [(ngModel)]="model.password" class="form-control mr-2" type="password" placeholder="Password">
-        <button class="btn btn-secondary btn-sm" type="submit">Login</button>
+        <button class="btn btn-sm btn-secondary" type="submit">Login</button>
       </form>
     </div>
   </nav>
