--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,14 +1,31 @@
-<form #registerForm="ngForm" (ngSubmit)="register()">
-<h2 class="text-center text-white">Sign up</h2>
-<hr/>
-<div class="form-group">
-    <input type="text" name="username" [(ngModel)]="model.username" class="form-control" placeholder="Username">
-</div>
-<div class="form-group">
-    <input type="password" name="password" [(ngModel)]="model.password" class="form-control" placeholder="Password">
-</div>
-<div class="form-group text-center">
-    <button class="btn btn-primary mr-2" type="submit">Register</button>
-    <button class="btn btn-danger" type="button" (click)="cancel()">Cancel</button>
-</div>
+<form [formGroup]="registerForm" (ngSubmit)="registerForm.valid && register()" autocomplete="off">
+    <h2 class="text-center text-white">Sign up</h2>
+    <hr />
+    <div class="form-group font-weight-bold">
+        <label class="control-label mr-2">I am a:</label>
+        <label class="radio-inline">
+            <input type="radio" value="male" formControlName="gender"> Male
+        </label>
+        <label class="radio-inline ml-3">
+            <input type="radio" value="female" formControlName="gender"> Female
+        </label>
+    </div>
+    <app-text-input [formControl]="getControl('username')" [label]="'Username'"></app-text-input>
+    <app-text-input [formControl]="getControl('knownAs')" [label]="'Known As'"></app-text-input>
+    <app-date-input [formControl]="getControl('dateOfBirth')" [maxDate]="maxDate" [label]="'Date Of Birth'"></app-date-input>
+    <app-text-input [formControl]="getControl('city')" [label]="'City'"></app-text-input>
+    <app-text-input [formControl]="getControl('country')" [label]="'Country'"></app-text-input>
+    <app-text-input [formControl]="getControl('password')" [label]="'Password'" [type]="'password'"></app-text-input>
+    <app-text-input [formControl]="getControl('confirmPassword')" [label]="'Confirm Password'" [type]="'password'"></app-text-input>
+    
+    <div class="row" *ngIf="validationErrors.length>0">
+        <ul class="text-danger">
+            <li *ngFor="let error of validationErrors">{{error}}</li>
+        </ul>
+    </div>
+
+    <div class="form-group text-center">
+        <button [disabled]="!registerForm.valid" class="btn btn-primary mr-2" type="submit">Register</button>
+        <button class="btn btn-danger" type="button" (click)="cancel()">Cancel</button>
+    </div>
 </form>
