--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,5 +1,58 @@
+<div class="text-center mt-3">
+    <h2>Your matches {{pagination?.totalItems}} found</h2>
+</div>
+
+<div class="container">
+    <form #for="ngForm" class="form-inline mb-3" (ngSubmit)="loadMembers()" autocomplete="false">
+        <div class="form-group">
+            <label>Age from</label>
+            <input type="number" class="ml-2 form-control form-control-sm" style="width:70px;" name="minAge"
+                [(ngModel)]="userParams.minAge">
+        </div>
+        <div class="form-group px-2">
+            <label>Age to</label>
+            <input type="number" class="ml-2 form-control form-control-sm" style="width:70px;" name="maxAge"
+                [(ngModel)]="userParams.maxAge">
+        </div>
+        <div class="form-group px-2">
+            <label>Show:</label>
+            <select name="gender" [(ngModel)]="userParams.gender" style="width:130px" 
+            class="ml-1 form-control form-control-sm">
+                <option *ngFor="let gender of genderList" [value]="gender.value">
+                    {{gender.display}}
+                </option>
+            </select>
+        </div>
+
+        <button class="btn btn-sm btn-outline-info" type="submit">
+            Apply Filters
+        </button>
+        <button class="btn btn-sm btn-outline-warning" (click)="resetFilters()" type="button">
+            Reset
+        </button>
+
+        <div class="col">
+            <div class="btn-group float-right">
+                <button class="btn btn-sm btn-primary" name="orderBy" btnRadio="lastActive" [(ngModel)]="userParams.orderBy" (click)="loadMembers()" type="button">
+                    Last Active
+                </button>
+                <button class="btn btn-sm btn-primary" name="orderBy" btnRadio="created" [(ngModel)]="userParams.orderBy" (click)="loadMembers()" type="button">
+                    Newest Members
+                </button>
+            </div>
+        </div>
+    </form>
+</div>
+
 <div class="row">
-    <div *ngFor="let member of members$ | async" class="col-2">
+    <div *ngFor="let member of members" class="col-2">
         <app-member-card [member]="member"></app-member-card>
     </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+        (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;"
+        lastText="&raquo;">
+    </pagination>
 </div>
