--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -20,7 +20,7 @@
 
       <div class="dropdown" dropdown *ngIf="(accountService.currentUsers$ | async) as user">
         <img src="{{user.photoUrl || './assets/user.png'}}" class="rounded-circle" alt="{{user.username}}">
-        <a dropdownToggle class="dropdown-toggle text-light ml-2 font-weight-bold text-decoration-none">Welcome {{user.username | titlecase}}<span class="caret"></span></a>
+        <a dropdownToggle class="dropdown-toggle text-light ml-2 font-weight-bold text-decoration-none">Welcome {{user.knownAs | titlecase}}<span class="caret"></span></a>
         <div  *dropdownMenu class="dropdown-menu mt-1">
           <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
