--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -38,17 +38,17 @@
             <tab heading="About {{member.knownAs}}">
                 <form #editForm="ngForm" id="editForm" (ngSubmit)="updateMember()">
                     <h4>Description</h4>
-                    <textarea class="form-control" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
+                    <textarea class="form-control bg-dark text-light" [(ngModel)]="member.introduction" name="introduction" rows="6"></textarea>
                     <h4 class="mt-2">Looking for</h4>
-                    <textarea class="form-control" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
+                    <textarea class="form-control bg-dark text-light" [(ngModel)]="member.lookingFor" name="lookingFor" rows="6"></textarea>
                     <h4 class="mt-2">Interests</h4>
-                    <textarea class="form-control" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
+                    <textarea class="form-control bg-dark text-light" [(ngModel)]="member.interests" name="interests" rows="6"></textarea>
                     <h4 class="mt-2">Location Details:</h4>
                     <div class="form-inline">
-                        <label for="city">City: </label>
-                        <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2">
-                        <label for="city">Country: </label>
-                        <input [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2">
+                        <label class="font-weight-bold">City: </label>
+                        <input [(ngModel)]="member.city" type="text" name="city" class="form-control mx-2 bg-dark text-light">
+                        <label class="font-weight-bold">Country: </label>
+                        <input [(ngModel)]="member.country" type="text" name="country" class="form-control mx-2 bg-dark text-light">
                     </div>
                 </form>
             </tab>
