--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
           </li>
+          <li *appHasRole="['Admin','Moderator']" class="nav-item">
+            <a class="nav-link" routerLink="/admin" routerLinkActive="active">Admin</a>
+          </li>
         </ng-container>
         <li class="nav-item">
           <a class="nav-link" routerLink="/errors" routerLinkActive="active">Errors</a>
@@ -20,7 +23,7 @@
 
       <div class="dropdown" dropdown *ngIf="(accountService.currentUsers$ | async) as user">
         <img src="{{user.photoUrl || './assets/user.png'}}" class="rounded-circle" alt="{{user.username}}">
-        <a dropdownToggle class="dropdown-toggle text-light ml-2 font-weight-bold text-decoration-none">Welcome {{user.knownAs | titlecase}}<span class="caret"></span></a>
+        <a dropdownToggle class="dropdown-toggle text-light ml-2 font-weight-bold text-decoration-none">Welcome {{user.knownAs || user.username | titlecase}}<span class="caret"></span></a>
         <div  *dropdownMenu class="dropdown-menu mt-1">
           <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
           <div class="dropdown-divider"></div>
