End of section 17

--- a/client/src/app/modals/roles-modal/roles-modal.component.html
+++ b/client/src/app/modals/roles-modal/roles-modal.component.html
@@ -14,10 +14,10 @@
     </form>
 </div>
 <div class="modal-footer">
-    <button type="button" class="btn btn-default" (click)="bsModalRef.hide()">
+    <button type="button" class="btn btn-danger" (click)="bsModalRef.hide()">
         Cancel
     </button>
-    <button type="button" class="btn btn-success" (click)="updateRoles()">
+    <button type="button" class="btn btn-primary" (click)="updateRoles()">
         SUbmit
     </button>
 </div>
